<resources>
    <string name="app_name">DIY Halloween Costume</string>
    <string name="title_activity_add_costume">Add Costume</string>
    <string name="name_hint">Costume Name</string>
    <string name="btnAddItem">Add Item</string>
    <string name="item_hint">Item Needed</string>
    <string name="lblItems">Items Needed:</string>
    <string name="notes_hint">Notes</string>
    <string name="btnAddCostume">Add Costume</string>
    <string name="no_name_error">Please add a Costume Name</string>
    <string name="lblItemsNeeded">Items Needed:</string>
</resources>
