<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddCostume"
    tools:showIn="@layout/activity_add_costume">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutName"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:hint="@string/name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCostumeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgCamera"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutName"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutListItem"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:hint="@string/item_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCamera">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/material_button"
        android:layout_width="92dp"
        android:layout_height="42dp"
        android:text="@string/btnAddItem"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/txtLayoutListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLayoutListItem"
        app:layout_constraintTop_toTopOf="@+id/txtLayoutListItem" />

    <TextView
        android:id="@+id/lblItemsNeeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutListItem" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblItemsNeeded">

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutNotes"
        android:layout_width="375dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:hint="@string/notes_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textStart" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCostume"
        android:layout_width="376dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnAddCostume"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutNotes" />

</androidx.constraintlayout.widget.ConstraintLayout>